--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0-alpha3",
+    "date-fns": "^2.29.3",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.8.12",
     "jquery": "^3.6.4",
     "ng2-img-max": "^2.2.8",
     "ngx-toastr": "^16.1.0",
