--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.8.12",
     "ng2-img-max": "^2.2.8",
+    "ngx-bootstrap": "^10.2.0",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
