--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -59,6 +59,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4200
+          },
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
