--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=btdb
 DB_USER=root
-# DB_PASSWORD=root
-DB_PASSWORD=Rootraul97.
+DB_PASSWORD=root
+# DB_PASSWORD=Rootraul97.
 JWT_SECRET=ClaveSecreta
