--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
-SERVER_PORT=80
+SERVER_PORT=8080
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=btdb
-# DB_USER=root
-DB_USER=rootraul
-# DB_PASSWORD=root
-DB_PASSWORD=Rootraul97.
+DB_USER=root
+# DB_USER=rootraul
+DB_PASSWORD=root
+# DB_PASSWORD=Rootraul97.
 JWT_SECRET=ClaveSecreta
