--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@ DB_PORT=3306
 DB_DATABASE=btdb
 DB_USER=root
 # DB_USER=rootraul
-DB_PASSWORD=root
+DB_PASSWORD=
 # DB_PASSWORD=Rootraul97.
 JWT_SECRET=ClaveSecreta
